@startuml
'https://plantuml.com/class-diagram

class TiGia {
    List<NhaDauTu> listeners
    void attach(NhaDauTu ndt);
    void dettach(NhaDauTu ndt);
    void capNhatTiGia(float delta)
}
Interface NhaDauTuListener {
    void update(TiGia tigia);
}
class NhaDauTuA {
    TiGia tigia;
}
class NhaDauTuB {
    TiGia tigia;
}

TiGia *--> NhaDauTuListener: listeners

NhaDauTuListener <|-- NhaDauTuA
NhaDauTuListener <|-- NhaDauTuB

@enduml